# QOwnNotes-Portable

.github/workflows/: build-release-qt6-win-static.yml  build-release-qt6.yml  portable-qt6-static.yml
build-systems/github/windows/: build-zip-qt6-static.ps1
src/: CMakeLists.txt  QownNotes.pro
src/cmake/: FindBotan2.cmake
src/libraries/botan/: CMakeLists.txt
src/libraries/diff_match_patch/: CMakeLists.txt
src/libraries/qlitehtml/: CMakeLists.txt
src/libraries/sonnet/src/plugins/hunspell/hunspell/: hunspell_lib.pri
